Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS

{{$NEXT}}

0.013  2017-09-14 21:30:58 UTC

  - Test::CleanNamespaces failes if there are no files to check

0.012  2017-09-14 19:16:33 UTC

  - The VERSION in the pod must be the version of the project, not of the
    Author::SKIRMESS::InsertVersion plugin

0.011  2017-09-14 18:51:34 UTC

  - Added MetaData::BuiltWith plugin
  - Added SetScriptShebang plugin
  - Added documentation to the Author::SKIRMESS::RepositoryBase plugin
  - Update the VERSION section in all files that contain a POD VERSION
    section

0.010  2017-09-10 16:43:32 UTC

  - Added Dist::Zilla::Plugin::Author::SKIRMESS::RepositoryBase
  - All generated files are now created by
    Dist::Zilla::Plugin::Author::SKIRMESS::RepositoryBase during the
    "Before Build" phase. For release builds of the bundle itself, the
    files are recreated again during the "Munge Files" phase to have the
    new version stamped in them during and not the old version.
  - Removed Dist::Zilla::Plugin::Author::SKIRMESS::Perl::Tidy::RC
  - Removed Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Changes
  - Removed
    Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::CleanNamespaces
  - Removed Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::CPAN::Meta
  - Removed
    Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::CPAN::Meta::JSON
  - Removed
    Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::DistManifest
  - Removed Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::EOL
  - Removed Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Kwalitee
  - Removed
    Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::MinimumVersion
  - Removed Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Mojibake
  - Removed Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::NoTabs
  - Removed
    Dist::Zilla::Plugin::Author::SKIRMESS::Test::XT::Test::Perl::Critic