@@ -178,7 +178,6 @@ x_BuiltWith:
     Perl::Critic::Policy::Moose::RequireMakeImmutable: '1.05'
     Perl::Critic::Utils: '1.130'
     Pod::Wordlist: '1.20'
-    Test::CPAN::Changes: '0.400002'
     Test::CPAN::Meta: '0.25'
     Test::CPAN::Meta::JSON: '0.16'
     Test::CleanNamespaces: '0.22'
@@ -332,7 +331,6 @@ x_Dist_Zilla:
             - xt/author/pod-syntax.t
             - xt/author/portability.t
             - xt/author/test-version.t
-            - xt/release/changes.t
             - xt/release/eol.t
             - xt/release/kwalitee.t
             - xt/release/manifest.t
@@ -591,7 +589,6 @@ x_Dist_Zilla:
             - xt/author/pod-syntax.t
             - xt/author/portability.t
             - xt/author/test-version.t
-            - xt/release/changes.t
             - xt/release/eol.t
             - xt/release/kwalitee.t
             - xt/release/manifest.t
