@@ -86,7 +86,6 @@ on 'develop' => sub {
   requires "Perl::Critic::Policy::Moose::RequireMakeImmutable" => "1.05";
   requires "Perl::Critic::Utils" => "0";
   requires "Pod::Wordlist" => "0";
-  requires "Test::CPAN::Changes" => "0";
   requires "Test::CPAN::Meta" => "0.12";
   requires "Test::CPAN::Meta::JSON" => "0";
   requires "Test::CleanNamespaces" => "0";
