@@ -1,12 +1,0 @@
-#!perl
-
-use 5.006;
-use strict;
-use warnings;
-
-# this test was generated with
-# Dist::Zilla::Plugin::Author::SKIRMESS::RepositoryBase 0.013
-
-use Test::CPAN::Changes;
-
-changes_ok();
